//
// Copyright 2021 The Project Oak Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
//

syntax = "proto3";

package oak.functions.testing;

import "proto/micro_rpc/options.proto";

service TestModule {
  // method_id: 0
  rpc Lookup(LookupRequest) returns (LookupResponse) {
    option (.oak.micro_rpc.method_id) = 0;
  }
  // method_id: 1
  rpc EchoAndPanic(EchoAndPanicRequest) returns (EchoAndPanicResponse) {
    option (.oak.micro_rpc.method_id) = 1;
  }
}

message LookupRequest {
  repeated bytes keys = 1;
  enum Mode {
    INDIVIDUAL = 0;
    BATCH = 1;
  }
  Mode mode = 2;
}

message LookupResponse {
  repeated bytes values = 1;
}

// Echo the bytes back, and then panic.
message EchoAndPanicRequest {
  bytes data = 5;
}

message EchoAndPanicResponse {
  bytes data = 2;
}
